clasp 3.1.2:
  * fixed: Option "--heuristic" failed to accept decay factor for domain heuristic
  * fixed: LogicProgram::getDisjFor() failed to handle hash collisions correctly
  * fixed: facts in disjunctions not always correctly handled
  * fixed: domain heuristic failed to distinguish atom names sharing a common prefix
  * fixed: LogicProgram::write() must not output gamma rules and/or atoms that are false
  * fixed regression in handling of sign modifier in domain heuristic
  * fixed regression in backpropagation during preprocessing

clasp 3.1.1: Wednesday, 12th November 2014
  * LparseReader now handles "external statement"
  * fixed: low-level config interface failed to correctly handle successive changes of "opt-bound"
  * fixed: wrong completition nogoods with option "--no-gamma"
  * fixed regression in rule simplification (regression in 3.0.x)
  * fixed regression in "--configuration=jumpy"
  * fixed regression in handling of modifiers true/false in domain heuristic
  
clasp 3.1.0: Friday, 15th August 2014
  * added new strategies for unsatisfiable-core based optimization
  * added alternative distribution mode via thread-local queues (option " --dist-mode")
  * generators now propagate top-level assignment to testers
  * removed optimization options from default configurations
  * CLI changes:
    - option "--sat-prepro" now expects the algorithm followed by an optional list of limits
    - option "--opt-strategy" now takes two arguments; the first mandatory argument selects the 
      major strategy (i.e. branch and bound or unsat-core), while the optional second argument
      controls fine tuning of said strategy
    - combined options "--dom-mod" and "--dom-pref" and added enum mode "domRec" for 
      enabling subset optimization via domain heuristic
    - added "--forget-on-step=2" for discarding previously set variable phases and changed
      value for discarding nogood activities and learnt nogoods to 4 and 8, respectively